--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetShop Pimpolho</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/images/favicoon.png" />
 </head>
 <body>
 <header>
@@ -19,7 +19,7 @@
 <nav>
     <ul>
         <li class="active"><a href="/">Todos</a></li>
-        <li class="{{#menu.gato}}active{{/menu.gato}}"><a href="/gatos">Gatos</a></li>
+        <li class="{{#menu.gatos}}active{{/menu.gatos}}"><a href="/gatos">Gatos</a></li>
         <li class="{{#menu.acessorios}}active{{/menu.acessorios}}"><a href="/acessorios">Acessórios</a></li>
     </ul>
 </nav>
